--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".products.PurchaseListActivity" />
+        <activity android:name=".DrawerHomeActivity" />
+        <!--<activity android:name=".products.PurchaseListActivity" />-->
         <activity android:name=".products.FormProductActivity" />
-        <activity android:name=".products.ProductsActivity" />
+        <!--<activity android:name=".products.ProductsActivity" />-->
         <activity android:name=".register.RegisterActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".MainActivity">
