--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+
+    signingConfigs {
+        Signing {
+            keyAlias 'DrXKeystore'
+            keyPassword 'DrXKeystore'
+            storeFile file('/Users/sebastiantellez/Desktop/DrXKeystore')
+            storePassword 'DrXKeystore'
+        }
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.gorrotowi.drxstore"
@@ -31,6 +41,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.Signing
         }
     }
 }
@@ -59,6 +70,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'com.github.dhaval2404:imagepicker-support:1.1'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
